--- a/obesity-predictor.ipynb
+++ b/obesity-predictor.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "* Kevin Taing kt26746\n",
-    "* Derek Chen dyc377\n",
+    "* Kevin Taing \n",
+    "* Derek Chen \n",
     "* Sam Lu\n",
-    "* Jack Holt jgh2772\n",
+    "* Jack Holt \n",
     "\n",
     "Dataset in use: https://www.kaggle.com/datasets/aravindpcoder/obesity-or-cvd-risk-classifyregressorcluster/data\n",
     "\n",
